--- a/modules/common/src/list/listElements.component.html
+++ b/modules/common/src/list/listElements.component.html
@@ -2,19 +2,20 @@
   <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
       <ion-button [title]="t._('IDEA_COMMON.LIST.CANCEL_AND_CLOSE')" (click)="close()">
-        <ion-icon slot="icon-only" name="chevron-down"></ion-icon>
+        <ion-icon slot="icon-only" icon="chevron-down"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-searchbar
-      [placeholder]="searchPlaceholder || t._('COMMON.SEARCH')"
-      (ionInput)="search($event.target ? $event.target.value : '')"
+      #searchbar
+      [placeholder]="searchPlaceholder ?? t._('COMMON.SEARCH')"
+      (ionInput)="search($event.target.value)"
     ></ion-searchbar>
     <ion-buttons slot="end">
       <ion-button [title]="t._('IDEA_COMMON.LIST.NEW_ELEMENT')" (click)="addElement()">
-        <ion-icon name="add" slot="icon-only"></ion-icon>
+        <ion-icon icon="add" slot="icon-only"></ion-icon>
       </ion-button>
       <ion-button [title]="t._('IDEA_COMMON.LIST.SAVE_AND_CLOSE')" (click)="close(true)">
-        <ion-icon name="checkmark-circle" slot="icon-only"></ion-icon>
+        <ion-icon icon="checkmark-circle" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -23,25 +24,26 @@
   <ion-list class="listElements">
     <ion-item lines="none" *ngIf="!filteredList.length">
       <ion-label>
-        <i>{{ noElementsFoundText || ('IDEA_COMMON.LIST.NO_ELEMENTS_FOUND' | translate) }}</i>
+        <i>{{ noElementsFoundText ?? ('IDEA_COMMON.LIST.NO_ELEMENTS_FOUND' | translate) }}</i>
       </ion-label>
     </ion-item>
-    <ion-virtual-scroll [items]="filteredList">
-      <ion-item class="listElement" *virtualItem="let element">
-        <ion-label>{{ getElementName(element) }}</ion-label>
-        <ion-button slot="end" fill="clear" *ngIf="labelElements" (click)="editElement(element)">
-          <ion-icon name="pencil-sharp" slot="icon-only"></ion-icon>
-        </ion-button>
-        <ion-button
-          slot="end"
-          fill="clear"
-          color="danger"
-          [title]="t._('IDEA_COMMON.LIST.DELETE_ELEMENT')"
-          (click)="removeElement(element)"
-        >
-          <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
-        </ion-button>
-      </ion-item>
-    </ion-virtual-scroll>
+    <ion-item class="listElement" *ngFor="let element of filteredList">
+      <ion-label>{{ getElementName(element) }}</ion-label>
+      <ion-button slot="end" fill="clear" *ngIf="labelElements" (click)="editElement(element)">
+        <ion-icon icon="pencil-sharp" slot="icon-only"></ion-icon>
+      </ion-button>
+      <ion-button
+        slot="end"
+        fill="clear"
+        color="danger"
+        [title]="t._('IDEA_COMMON.LIST.DELETE_ELEMENT')"
+        (click)="removeElement(element)"
+      >
+        <ion-icon icon="trash-outline" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-item>
   </ion-list>
+  <ion-infinite-scroll (ionInfinite)="search(searchbar?.value, $event.target)">
+    <ion-infinite-scroll-content> </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
