--- a/modules/common/src/select/suggestions.component.html
+++ b/modules/common/src/select/suggestions.component.html
@@ -2,23 +2,24 @@
   <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
       <ion-button *ngIf="!mustChoose" [title]="t._('IDEA_COMMON.SELECT.CLOSE_WITHOUT_SELECTING')" (click)="select()">
-        <ion-icon slot="icon-only" name="chevron-down"></ion-icon>
+        <ion-icon slot="icon-only" icon="chevron-down"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-searchbar
-      [placeholder]="searchPlaceholder || t._('IDEA_COMMON.SELECT.SEARCH')"
+      #searchbar
+      [placeholder]="searchPlaceholder ?? t._('IDEA_COMMON.SELECT.SEARCH')"
       [debounce]="100"
       [class.withAdditionalToolbar]="showCategoriesFilters || detailsAreAvailable"
-      (ionInput)="search($event.target ? $event.target.value : '')"
+      (ionInput)="search($event.target.value)"
     ></ion-searchbar>
     <ion-buttons slot="end" *ngIf="!hideClearButton">
       <ion-button [title]="t._('IDEA_COMMON.SELECT.CLEAR_SELECTION')" (click)="select({ value: '' })">
-        <ion-icon slot="icon-only" name="backspace"></ion-icon>
+        <ion-icon slot="icon-only" icon="backspace"></ion-icon>
       </ion-button>
     </ion-buttons>
     <div class="additionalToolbar" *ngIf="showCategoriesFilters || detailsAreAvailable">
       <ion-button color="light" size="small" *ngIf="detailsAreAvailable" (click)="toggleDetailsVisibilityPreference()">
-        <ion-icon [name]="shouldShowDetails ? 'eye-off' : 'eye'" slot="start"></ion-icon>
+        <ion-icon [icon]="shouldShowDetails ? 'eye-off' : 'eye'" slot="start"></ion-icon>
         {{ (shouldShowDetails ? 'IDEA_COMMON.SELECT.HIDE_DETAILS' : 'IDEA_COMMON.SELECT.SHOW_DETAILS') | translate }}
       </ion-button>
       <ion-button
@@ -28,8 +29,8 @@
         [class.strong]="category1"
         (click)="category1 ? resetFilterCategoryN(1) : setFilterCategoryN(1)"
       >
-        <ion-icon [name]="category1 ? 'close' : 'filter'" slot="start"></ion-icon>
-        {{ category1 || ('IDEA_COMMON.SELECT.TAP_TO_FILTER' | translate) }}
+        <ion-icon [icon]="category1 ? 'close' : 'filter'" slot="start"></ion-icon>
+        {{ category1 ?? ('IDEA_COMMON.SELECT.TAP_TO_FILTER' | translate) }}
       </ion-button>
       <ion-button
         color="light"
@@ -38,8 +39,8 @@
         [class.strong]="category2"
         (click)="category2 ? resetFilterCategoryN(2) : setFilterCategoryN(2)"
       >
-        <ion-icon [name]="category2 ? 'close' : 'filter'" slot="start"></ion-icon>
-        {{ category2 || ('IDEA_COMMON.SELECT.TAP_TO_FILTER' | translate) }}
+        <ion-icon [icon]="category2 ? 'close' : 'filter'" slot="start"></ion-icon>
+        {{ category2 ?? ('IDEA_COMMON.SELECT.TAP_TO_FILTER' | translate) }}
       </ion-button>
     </div>
   </ion-toolbar>
@@ -50,7 +51,7 @@
       <ion-label>
         <i>
           {{
-            noElementsFoundText ||
+            noElementsFoundText ??
               ((allowUnlistedValues
                 ? 'IDEA_COMMON.SELECT.NO_ELEMENTS_FOUND_START_TYPING_TO_ADD_ONE'
                 : 'IDEA_COMMON.SELECT.NO_ELEMENTS_FOUND'
@@ -72,45 +73,46 @@
         {{ searchbar.value }}
       </i>
     </ion-item>
-    <ion-virtual-scroll #virtualScroll [items]="suggestions">
-      <ion-item
-        class="suggestion"
-        *virtualItem="let suggestion"
-        [button]="true"
-        [title]="t._('IDEA_COMMON.SELECT.SELECT_', { suggestion: suggestion.name || suggestion.value })"
-        (click)="select(suggestion)"
-      >
-        <ion-label>
-          <p class="categories" *ngIf="shouldShowDetails && (suggestion.category1 || suggestion.category2)">
-            <ion-text
-              *ngIf="suggestion.category1"
-              [innerHTML]="suggestion.category1 | boldprefix: searchbar.value"
-            ></ion-text>
-            <ion-text *ngIf="suggestion.category1 && suggestion.category2" class="categoriesDivider"> | </ion-text>
-            <ion-text
-              *ngIf="suggestion.category2"
-              [innerHTML]="suggestion.category2 | boldprefix: searchbar.value"
-            ></ion-text>
-          </p>
-          <!-- the "key" div is used for keyboard controls -->
-          <div class="key" style="display: none">
-            {{ suggestion.value }}
-          </div>
-          <ion-text [innerHTML]="suggestion.name || suggestion.value | boldprefix: searchbar.value"></ion-text>
-          <ion-text color="medium" class="ion-text-wrap">
-            <p
-              *ngIf="suggestion.name && !hideIdFromUI && shouldShowDetails"
-              [innerHTML]="suggestion.value | boldprefix: searchbar.value"
-            ></p>
-            <p
-              class="description"
-              *ngIf="suggestion.description && shouldShowDetails"
-              [innerHTML]="suggestion.description | boldprefix: searchbar.value"
-              [class.marginTop]="suggestion.name && !hideIdFromUI && shouldShowDetails"
-            ></p>
-          </ion-text>
-        </ion-label>
-      </ion-item>
-    </ion-virtual-scroll>
+    <ion-item
+      class="suggestion"
+      *ngFor="let suggestion of suggestions"
+      button
+      [title]="t._('IDEA_COMMON.SELECT.SELECT_', { suggestion: suggestion.name ?? suggestion.value })"
+      (click)="select(suggestion)"
+    >
+      <ion-label>
+        <p class="categories" *ngIf="shouldShowDetails && (suggestion.category1 ?? suggestion.category2)">
+          <ion-text
+            *ngIf="suggestion.category1"
+            [innerHTML]="suggestion.category1 | boldprefix: searchbar.value"
+          ></ion-text>
+          <ion-text *ngIf="suggestion.category1 && suggestion.category2" class="categoriesDivider"> | </ion-text>
+          <ion-text
+            *ngIf="suggestion.category2"
+            [innerHTML]="suggestion.category2 | boldprefix: searchbar.value"
+          ></ion-text>
+        </p>
+        <!-- the "key" div is used for keyboard controls -->
+        <div class="key" style="display: none">
+          {{ suggestion.value }}
+        </div>
+        <ion-text [innerHTML]="suggestion.name ?? suggestion.value | boldprefix: searchbar.value"></ion-text>
+        <ion-text color="medium" class="ion-text-wrap">
+          <p
+            *ngIf="suggestion.name && !hideIdFromUI && shouldShowDetails"
+            [innerHTML]="suggestion.value | boldprefix: searchbar.value"
+          ></p>
+          <p
+            class="description"
+            *ngIf="suggestion.description && shouldShowDetails"
+            [innerHTML]="suggestion.description | boldprefix: searchbar.value"
+            [class.marginTop]="suggestion.name && !hideIdFromUI && shouldShowDetails"
+          ></p>
+        </ion-text>
+      </ion-label>
+    </ion-item>
   </ion-list>
+  <ion-infinite-scroll (ionInfinite)="search(searchbar?.value, $event.target)">
+    <ion-infinite-scroll-content> </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
