--- a/modules/common/src/checker/checker.component.html
+++ b/modules/common/src/checker/checker.component.html
@@ -1,7 +1,7 @@
 <ion-item
   class="checkerItem"
-  [lines]="lines || 'full'"
-  [title]="searchPlaceholder || null"
+  [lines]="lines ?? 'full'"
+  [title]="searchPlaceholder ?? null"
   [button]="!disabled"
   [class.withLabel]="label"
   (click)="fetchDataAndOpenModal()"
@@ -14,7 +14,7 @@
     [class.marginTop]="label"
     (click)="doIconSelect($event)"
   >
-    <ion-icon [name]="icon" slot="icon-only"></ion-icon>
+    <ion-icon [icon]="icon" slot="icon-only"></ion-icon>
   </ion-button>
   <ion-label position="stacked" *ngIf="label" [class.selectable]="!disabled || tappableWhenDisabled">
     {{ label }}
@@ -27,5 +27,5 @@
   >
     {{ getPreview() }}
   </ion-label>
-  <ion-icon slot="end" name="caret-down" class="selectIcon" *ngIf="!disabled" [class.selectable]="!disabled"></ion-icon>
+  <ion-icon slot="end" icon="caret-down" class="selectIcon" *ngIf="!disabled" [class.selectable]="!disabled"></ion-icon>
 </ion-item>
