--- a/modules/teams/src/resourceCenter/RCResources.component.html
+++ b/modules/teams/src/resourceCenter/RCResources.component.html
@@ -6,6 +6,7 @@
       </ion-button>
     </ion-buttons>
     <ion-searchbar
+      #searchbar
       [placeholder]="t._('IDEA_TEAMS.RESOURCE_CENTER.SEARCH_FOR_RESOURCES_OF_FOLDER_', { folder: folder.name })"
       (ionInput)="search($event.target ? $event.target.value : '')"
     ></ion-searchbar>
@@ -55,42 +56,43 @@
     <ion-item class="noElements" *ngIf="filteredResources && !filteredResources.length">
       <ion-label>{{ 'COMMON.NO_ELEMENT_FOUND' | translate }}</ion-label>
     </ion-item>
-    <ion-virtual-scroll *ngIf="filteredResources" [items]="filteredResources">
-      <ion-item *virtualItem="let r">
-        <ion-button
-          slot="start"
-          fill="clear"
-          [title]="t._('IDEA_TEAMS.RESOURCE_CENTER.OPEN_RESOURCE')"
-          [disabled]="offline.isOffline()"
-          (click)="openResource(r)"
-        >
-          <ion-icon name="open-outline" slot="icon-only"></ion-icon>
-        </ion-button>
-        <ion-icon slot="start" color="medium" [name]="getFormatIcon(r.format)" [title]="r.format"></ion-icon>
-        <ion-label>
-          {{ r.name }}
-          <p>{{ 'IDEA_TEAMS.RESOURCE_CENTER.LASTLY_UPDATED_X_AGO' | translate: { time: (r.version | dateLocale) } }}</p>
-        </ion-label>
-        <ion-note slot="end">{{ r.format }}</ion-note>
-        <ion-button
-          color="medium"
-          fill="clear"
-          slot="end"
-          *ngIf="admin"
-          [title]="t._('IDEA_TEAMS.RESOURCE_CENTER.ACTIONS_ON_THE_RESOURCE')"
-          [disabled]="offline.isOffline()"
-          (click)="actionsOnResource(r)"
-        >
-          <ion-icon name="ellipsis-vertical" slot="icon-only"></ion-icon>
-        </ion-button>
-        <input
-          [id]="r.resourceId.concat('_picker')"
-          type="file"
-          accept=".jpg,.jpeg,.png,.pdf"
-          style="display: none"
-          (change)="updateResource(r, $event)"
-        />
-      </ion-item>
-    </ion-virtual-scroll>
+    <ion-item *ngFor="let r of filteredResources">
+      <ion-button
+        slot="start"
+        fill="clear"
+        [title]="t._('IDEA_TEAMS.RESOURCE_CENTER.OPEN_RESOURCE')"
+        [disabled]="offline.isOffline()"
+        (click)="openResource(r)"
+      >
+        <ion-icon name="open-outline" slot="icon-only"></ion-icon>
+      </ion-button>
+      <ion-icon slot="start" color="medium" [name]="getFormatIcon(r.format)" [title]="r.format"></ion-icon>
+      <ion-label>
+        {{ r.name }}
+        <p>{{ 'IDEA_TEAMS.RESOURCE_CENTER.LASTLY_UPDATED_X_AGO' | translate: { time: (r.version | dateLocale) } }}</p>
+      </ion-label>
+      <ion-note slot="end">{{ r.format }}</ion-note>
+      <ion-button
+        color="medium"
+        fill="clear"
+        slot="end"
+        *ngIf="admin"
+        [title]="t._('IDEA_TEAMS.RESOURCE_CENTER.ACTIONS_ON_THE_RESOURCE')"
+        [disabled]="offline.isOffline()"
+        (click)="actionsOnResource(r)"
+      >
+        <ion-icon name="ellipsis-vertical" slot="icon-only"></ion-icon>
+      </ion-button>
+      <input
+        [id]="r.resourceId.concat('_picker')"
+        type="file"
+        accept=".jpg,.jpeg,.png,.pdf"
+        style="display: none"
+        (change)="updateResource(r, $event)"
+      />
+    </ion-item>
+    <ion-infinite-scroll (ionInfinite)="search(searchbar?.value, $event.target)">
+      <ion-infinite-scroll-content> </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
   </ion-list>
 </ion-content>
