--- a/modules/common/src/address/address.component.scss
+++ b/modules/common/src/address/address.component.scss
@@ -1,6 +1,9 @@
-.addressDetails ion-item {
-  --padding-start: 30px;
+ion-item[slot='header'] {
+  --highlight-color-focused: transparent;
+  --highlight-color-valid: transparent;
+  --highlight-color-invalid: transparent;
 }
-.marginTop {
-  margin-top: 14px;
+ion-list[slot='content'] {
+  padding-top: 0;
+  padding-left: 20px;
 }
