--- a/modules/agenda/src/agenda.component.html
+++ b/modules/agenda/src/agenda.component.html
@@ -9,15 +9,15 @@
       [sizeLg]="2"
       [pushLg]="8"
     >
-      <ion-item lines="none" class="calendarViewSelector">
+      <ion-item lines="none" class="calendarViewSelector" *ngIf="allowedViews.length > 1">
         <ion-select
           interface="popover"
           [value]="view"
           (ionChange)="$event?.detail ? setView($event.detail.value) : null"
         >
-          <ion-select-option [value]="CalendarView.Month">{{ 'IDEA_AGENDA.MONTH' | translate }}</ion-select-option>
-          <ion-select-option [value]="CalendarView.Week">{{ 'IDEA_AGENDA.WEEK' | translate }}</ion-select-option>
-          <ion-select-option [value]="CalendarView.Day">{{ 'IDEA_AGENDA.DAY' | translate }}</ion-select-option>
+          <ion-select-option *ngFor="let view of allowedViews" [value]="view">
+            {{ 'IDEA_AGENDA.' + view | uppercase | translate }}
+          </ion-select-option>
         </ion-select>
       </ion-item>
     </ion-col>
@@ -62,8 +62,9 @@
         <ion-icon name="chevron-forward-outline" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-col>
-    <ion-col class="ion-align-self-center" [size]="12" [sizeSm]="5" [pullSm]="7" [sizeLg]="8" [pullLg]="4">
-      <h2>{{ viewDate | calendarDate: view + 'ViewTitle':t.getCurrentLang() }}</h2>
+    <ion-col class="ion-align-self-center titleCol" [size]="12" [sizeSm]="5" [pullSm]="7" [sizeLg]="8" [pullLg]="4">
+      <h2>{{ viewDate | calendarDate : view + 'ViewTitle' : locale }}</h2>
+      <p *ngIf="titleNotes">{{ titleNotes }}</p>
     </ion-col>
   </ion-row>
   <!-- TEMPLATES (touch only what's necessary and leave everything else as it is) -->
@@ -71,9 +72,9 @@
     <span
       class="cal-event-title"
       [class.noWrap]="event.allDay"
-      [attr.aria-hidden]="{} | calendarA11y: 'hideEventTitle'"
+      [attr.aria-hidden]="{} | calendarA11y : 'hideEventTitle'"
     >
-      {{ event.title | calendarEventTitle: view:event }}
+      {{ event.title | calendarEventTitle : view : event }}
       <p *ngIf="!event.allDay">{{ getPreviewDescription(event.description) }}</p>
     </span>
   </ng-template>
@@ -95,10 +96,10 @@
       [class.needsAction]="Attendance.NEEDS_ACTION === weekEvent.event.attendance"
       [class.declined]="Attendance.DECLINED === weekEvent.event.attendance"
       [class.tentative]="Attendance.TENTATIVE === weekEvent.event.attendance"
-      [style.border-left-color]="weekEvent.event.color.primary"
-      [style.color]="getAlternateColor(weekEvent.event.color.primary, darkMode ? 80 : -40)"
-      [style.background-color]="getAlternateColor(weekEvent.event.color.primary, darkMode ? 60 : 80, 0.2)"
-      [mwlCalendarTooltip]="!tooltipDisabled && !platform.is('mobile') ? getTooltipContent(weekEvent.event) : ''"
+      [style.border-left-color]="weekEvent.event.color?.primary"
+      [style.color]="getAlternateColor(weekEvent.event.color?.primary, darkMode ? 80 : -40)"
+      [style.background-color]="getAlternateColor(weekEvent.event.color?.primary, darkMode ? 60 : 80, 0.2)"
+      [mwlCalendarTooltip]="!tooltipDisabled && !isMobile() ? getTooltipContent(weekEvent.event) : ''"
       [tooltipPlacement]="tooltipPlacement"
       [tooltipEvent]="weekEvent.tempEvent || weekEvent.event"
       [tooltipTemplate]="tooltipTemplate"
@@ -109,10 +110,10 @@
       tabindex="0"
       role="application"
       [attr.aria-label]="
-        { event: weekEvent.tempEvent || weekEvent.event, locale: locale } | calendarA11y: 'eventDescription'
+        { event: weekEvent.tempEvent || weekEvent.event, locale: locale } | calendarA11y : 'eventDescription'
       "
     >
-      <mwl-calendar-event-actions [event]="weekEvent.tempEvent || weekEvent.event"> </mwl-calendar-event-actions>
+      <mwl-calendar-event-actions [event]="weekEvent.tempEvent || weekEvent.event"></mwl-calendar-event-actions>
       &ngsp;
       <mwl-calendar-event-title
         [event]="weekEvent.tempEvent || weekEvent.event"
@@ -128,6 +129,28 @@
           [src]="avatar.url"
           [name]="avatar.title"
         ></idea-user-avatar>
+      </div>
+    </div>
+  </ng-template>
+  <ng-template
+    #hourSegmentTemplate
+    let-segment="segment"
+    let-locale="locale"
+    let-segmentHeight="segmentHeight"
+    let-isTimeLabel="isTimeLabel"
+  >
+    <div
+      #segmentElement
+      class="cal-hour-segment"
+      [style.height.px]="segmentHeight"
+      [class.cal-hour-start]="segment.isStart"
+      [class.cal-after-hour-start]="!segment.isStart"
+      [ngClass]="segment.cssClass"
+      (mousedown)="allowDragToCreate ? startDragToCreate($event, segment.date, segmentElement) : null"
+      (touchstart)="allowDragToCreate ? startDragToCreate($event, segment.date, segmentElement) : null"
+    >
+      <div class="cal-time" *ngIf="isTimeLabel">
+        {{ segment.date | calendarDate : 'weekViewHour' : locale }}
       </div>
     </div>
   </ng-template>
@@ -161,6 +184,7 @@
       [dayEndHour]="dayEndHour"
       [hourSegments]="hourSegments"
       [eventTemplate]="eventTemplate"
+      [hourSegmentTemplate]="hourSegmentTemplate"
       (eventClicked)="selectEvent.emit($event.event)"
       (eventTimesChanged)="eventTimesChanged($event)"
       (dayHeaderClicked)="dateIsValid($event.day.date) ? selectDay.emit($event.day.date) : null"
@@ -178,6 +202,7 @@
       [dayEndHour]="dayEndHour"
       [hourSegments]="hourSegments"
       [eventTemplate]="eventTemplate"
+      [hourSegmentTemplate]="hourSegmentTemplate"
       (eventClicked)="selectEvent.emit($event.event)"
       (eventTimesChanged)="eventTimesChanged($event)"
       (hourSegmentClicked)="dateIsValid($event.date) ? selectSlot.emit($event.date) : null"
