--- a/modules/common/src/actionSheet/actionSheet.component.html
+++ b/modules/common/src/actionSheet/actionSheet.component.html
@@ -2,7 +2,10 @@
   <ion-grid class="ion-padding actionSheetGrid">
     <ion-row class="headerRow" *ngIf="header">
       <ion-col class="ion-text-center">
-        <ion-label>{{ header }}</ion-label>
+        <ion-label class="ion-text-wrap">
+          {{ header }}
+          <p *ngIf="subHeader">{{ subHeader }}</p>
+        </ion-label>
       </ion-col>
     </ion-row>
     <ion-row class="ion-justify-content-center buttonsRow">
@@ -19,7 +22,7 @@
           <div>
             <ion-icon *ngIf="withIcons" [name]="b.icon || 'flash'"></ion-icon>
             <br *ngIf="withIcons" />
-            <ion-label>{{ b.text }}</ion-label>
+            <ion-label class="ion-text-wrap">{{ b.text }}</ion-label>
           </div>
         </ion-button>
       </ion-col>
